--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{BASE_TAG}}
 
+    <link href="//fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/banco.css">
   </head>
