Make loading cover only appears on app load.
And immediately as soon as styles are available without needing to wait
for Ember to load, this stops the “pop” where Ember has to load and
then hit the ApplicationRoute’s loading action before the cover is
applied.

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/banco.css">
   </head>
-  <body>
+  <body class="loading">
     <script>
       window.BancoENV = {{ENV}};
       window.EmberENV = window.BancoENV.EmberENV;
